# SSHagement

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: connections.rs  folders.rs  fsio.rs  known_hosts.rs  lib.rs  main.rs  snippet_folders.rs  snippets.rs  ssh.rs  store_util.rs
src/lib/: backup.ts  shortcuts.ts  types.ts  utils.ts  windowLink.ts
src/lib/api/: connections.ts  folders.ts  knownHosts.ts  snippetFolders.ts  snippets.ts  ssh.ts  windows.ts
src/lib/components/: CommandPalette.svelte  ConfirmDelete.svelte  ConnectionDialog.svelte  Logo.svelte  Settings.svelte  SnippetEditor.svelte
src/lib/components/layout/: Sidebar.svelte  SnippetsPanel.svelte  TitleBar.svelte  Workspace.svelte
src/lib/components/terminal/: PaneLayout.svelte  Terminal.svelte
src/lib/components/ui/button/: button.svelte  index.ts
src/lib/stores/: connections.svelte.ts  editor.svelte.ts  folders.svelte.ts  keybindings.svelte.ts  palette.svelte.ts  sessions.svelte.ts  settings.svelte.ts  snippetFolders.svelte.ts  snippets.svelte.ts  ui.svelte.ts
src/routes/: +layout.svelte  +page.svelte
